--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,132 +1,27 @@
 ---
-# Package management
-common_update_cache: true
-common_upgrade_packages: false
-common_install_packages:
-  - curl
-  - wget
-  - git
-  - vim
-  - htop
-  - tree
-  - unzip
-  - rsync
-  - lsof
-  - strace
-  - tcpdump
-  - net-tools
-  - bind-utils
+# Modern Common Role - Essential Variables Only
+# Focus on what's truly needed for base system setup
 
-# User management
+# Admin users to create with sudo access
 common_admin_users: []
 #  - name: admin
-#    groups: ["sudo", "wheel"]
-#    shell: /bin/bash
 #    ssh_keys:
-#      - "ssh-rsa AAAAB3... user@example.com"
+#      - "ssh-rsa AAAAB3... admin@example.com"
+#    sudo_nopasswd: false
 
-common_service_users: []
-#  - name: appuser
-#    system: true
-#    shell: /bin/false
-#    home: /opt/app
+# Essential packages (will merge with OS defaults)
+common_packages: []
 
-# SSH Configuration
-common_ssh_port: 22
-common_ssh_permit_root_login: "no"
-common_ssh_password_authentication: "no"
-common_ssh_pubkey_authentication: "yes"
-common_ssh_permit_empty_passwords: "no"
-common_ssh_challenge_response_auth: "no"
-common_ssh_gss_api_authentication: "no"
-common_ssh_x11_forwarding: "no"
-common_ssh_max_auth_tries: 3
-common_ssh_max_sessions: 10
-common_ssh_client_alive_interval: 300
-common_ssh_client_alive_count_max: 2
-common_ssh_allowed_users: []
-common_ssh_allowed_groups: ["sudo", "wheel"]
-
-# Security settings
-common_enable_firewall: true
-common_firewall_default_policy: "deny"
-common_firewall_allowed_ports:
-  - "{{ common_ssh_port }}/tcp"
-
-# Fail2ban
-common_enable_fail2ban: true
-common_fail2ban_bantime: 3600
-common_fail2ban_findtime: 600
-common_fail2ban_maxretry: 3
-
-# System settings
+# System configuration
 common_timezone: "UTC"
-common_enable_ntp: true
-common_ntp_servers:
-  - "0.pool.ntp.org"
-  - "1.pool.ntp.org"
-  - "2.pool.ntp.org"
-  - "3.pool.ntp.org"
+common_hostname: "{{ inventory_hostname }}"
 
-# Logging
-common_enable_rsyslog: true
-common_log_retention_days: 30
-common_enable_logrotate: true
+# SSH security (enabled by default)
+common_harden_ssh: true
+common_ssh_port: 22
+common_disable_root_login: true
+common_ssh_password_auth: false
 
-# Monitoring
-common_enable_node_exporter: true
-common_node_exporter_port: 9100
-common_node_exporter_user: "node-exporter"
-
-# Security hardening
-common_enable_security_hardening: true
-common_disable_unused_services: true
-common_unused_services:
-  - bluetooth
-  - cups
-  - avahi-daemon
-
-# Kernel parameters
-common_kernel_parameters:
-  # Network security
-  net.ipv4.ip_forward: 0
-  net.ipv4.conf.all.send_redirects: 0
-  net.ipv4.conf.default.send_redirects: 0
-  net.ipv4.conf.all.accept_redirects: 0
-  net.ipv4.conf.default.accept_redirects: 0
-  net.ipv4.conf.all.secure_redirects: 0
-  net.ipv4.conf.default.secure_redirects: 0
-  net.ipv4.icmp_ignore_bogus_error_responses: 1
-  net.ipv4.icmp_echo_ignore_broadcasts: 1
-  net.ipv4.conf.all.log_martians: 1
-  net.ipv4.conf.default.log_martians: 1
-  net.ipv4.tcp_syncookies: 1
-
-  # Memory protection
-  kernel.dmesg_restrict: 1
-  kernel.kptr_restrict: 2
-  kernel.yama.ptrace_scope: 1
-
-  # File system
-  fs.suid_dumpable: 0
-  fs.protected_hardlinks: 1
-  fs.protected_symlinks: 1
-
-# Limits
-common_security_limits:
-  - domain: "*"
-    type: soft
-    item: nofile
-    value: 65536
-  - domain: "*"
-    type: hard
-    item: nofile
-    value: 65536
-  - domain: "*"
-    type: soft
-    item: nproc
-    value: 32768
-  - domain: "*"
-    type: hard
-    item: nproc
-    value: 32768
+# Basic security (enabled by default)
+common_update_packages: true
+common_install_security_packages: true
