--- a/roles/docker/meta/main.yml
+++ b/roles/docker/meta/main.yml
@@ -1,13 +1,13 @@
 ---
 galaxy_info:
-  role_name: common
+  role_name: docker
   namespace: summitethic
   author: SummitEthic DevOps Team
-  description: Essential base system configuration and security hardening
+  description: Modern Docker installation with security hardening for 2025
   company: SummitEthic
   license: MIT
   min_ansible_version: "2.15"
-
+  
   platforms:
     - name: Ubuntu
       versions:
@@ -18,20 +18,20 @@ galaxy_info:
       versions:
         - "8"
         - "9"
-    - name: Debian
+    - name: Debian  
       versions:
         - bullseye  # 11
         - bookworm  # 12
 
   galaxy_tags:
-    - system
+    - docker
+    - containerization
     - security
-    - hardening
-    - base
-    - essential
+    - devops
+    - 2025
 
 dependencies: []
 
 collections:
-  - community.general
+  - community.docker
   - ansible.posix
