--- a/roles/monitoring/meta/main.yml
+++ b/roles/monitoring/meta/main.yml
@@ -1,9 +1,9 @@
 ---
 galaxy_info:
-  role_name: common
+  role_name: monitoring
   namespace: summitethic
   author: SummitEthic DevOps Team
-  description: Essential base system configuration and security hardening
+  description: Modern observability agents for metrics collection and system monitoring
   company: SummitEthic
   license: MIT
   min_ansible_version: "2.15"
@@ -24,14 +24,14 @@ galaxy_info:
         - bookworm  # 12
 
   galaxy_tags:
-    - system
-    - security
-    - hardening
-    - base
-    - essential
+    - monitoring
+    - observability
+    - prometheus
+    - metrics
+    - node-exporter
 
 dependencies: []
 
 collections:
-  - community.general
   - ansible.posix
+  - community.general
