--- a/roles/security/handlers/main.yml
+++ b/roles/security/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart ssh
+- name: restart auditd
   ansible.builtin.systemd_service:
-    name: "{{ common_ssh_service }}"
+    name: auditd
     state: restarted
