fixing linting (ansible, markdown, and shell)

--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart ssh
+- name: Restart SSH
   ansible.builtin.systemd_service:
     name: "{{ common_ssh_service }}"
     state: restarted
