--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -18,7 +18,7 @@
     path: /etc/apt/keyrings
     state: directory
     mode: '0755'
-  when: 
+  when:
     - ansible_os_family == "Debian"
     - docker_add_repo
   tags: [docker, install]
@@ -28,7 +28,7 @@
     url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
     dest: /etc/apt/keyrings/docker.asc
     mode: '0644'
-  when: 
+  when:
     - ansible_os_family == "Debian"
     - docker_add_repo
   tags: [docker, install]
@@ -36,12 +36,12 @@
 - name: Add Docker repository (Debian/Ubuntu)
   ansible.builtin.apt_repository:
     repo: >-
-      deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] 
-      https://download.docker.com/linux/{{ ansible_distribution | lower }} 
+      deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc]
+      https://download.docker.com/linux/{{ ansible_distribution | lower }}
       {{ ansible_distribution_release }} stable
     filename: docker
     update_cache: true
-  when: 
+  when:
     - ansible_os_family == "Debian"
     - docker_add_repo
   tags: [docker, install]
@@ -53,7 +53,7 @@
     baseurl: https://download.docker.com/linux/centos/$releasever/$basearch/stable
     gpgkey: https://download.docker.com/linux/centos/gpg
     gpgcheck: true
-  when: 
+  when:
     - ansible_os_family == "RedHat"
     - docker_add_repo
   tags: [docker, install]
@@ -63,7 +63,7 @@
     name: "{{ docker_packages }}"
     state: present
     update_cache: true
-  notify: restart docker
+  notify: Restart Docker
   tags: [docker, install]
 
 - name: Create docker group
@@ -94,7 +94,7 @@
     dest: /etc/docker/daemon.json
     mode: '0644'
     backup: true
-  notify: restart docker
+  notify: Restart Docker
   tags: [docker, config]
 
 - name: Apply security hardening
@@ -114,15 +114,15 @@
         line: "dockremap:165536:65536"
         create: true
         mode: '0644'
-      notify: restart docker
+      notify: Restart Docker
 
-    - name: Configure user namespace subordinate GID  
+    - name: Configure user namespace subordinate GID
       ansible.builtin.lineinfile:
         path: /etc/subgid
         line: "dockremap:165536:65536"
         create: true
         mode: '0644'
-      notify: restart docker
+      notify: Restart Docker
 
 - name: Enable and start Docker service
   ansible.builtin.systemd_service:
@@ -167,7 +167,7 @@
 
 - name: Display Docker installation info
   ansible.builtin.debug:
-    msg: 
+    msg:
       - "Docker version: {{ docker_info.host_info.ServerVersion }}"
       - "Docker Compose: {{ compose_version.stdout.split()[2] if compose_version.stdout else 'Available' }}"
       - "Docker Buildx: {{ buildx_version.stdout.split()[1] if buildx_version.stdout else 'Available' }}"
