--- a/roles/firewall/handlers/main.yml
+++ b/roles/firewall/handlers/main.yml
@@ -1,9 +1,9 @@
 ---
-- name: reload ufw
+- name: Reload UFW
   community.general.ufw:
     state: reloaded
 
-- name: restart firewalld
+- name: Restart firewalld
   ansible.builtin.systemd_service:
     name: firewalld
     state: restarted
