--- a/roles/backup/handlers/main.yml
+++ b/roles/backup/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart backup service
+- name: Restart backup service
   ansible.builtin.systemd_service:
     name: backup
     state: restarted
