fix: error linting

--- a/roles/traefik/handlers/main.yml
+++ b/roles/traefik/handlers/main.yml
@@ -3,4 +3,4 @@
   community.docker.docker_compose_v2:
     project_src: "{{ traefik_data_dir }}"
     state: present
-    restarted: true
+    recreate: always
